# crisol

./: .env.example  .gitignore  export.py  main.py  models.py  pyproject.toml
.github/workflows/: ci.yml  update-calendars.yml
calendars/: calendar_ISS-GR1_SAW-GR1_AC2-GR1_BD-GR1.ics  calendar_ISS-GR1_SAW-GR1_AC2-GR1_BD-GR2.ics  calendar_ISS-GR1_SAW-GR1_AC2-GR2_BD-GR1.ics  calendar_ISS-GR1_SAW-GR1_AC2-GR2_BD-GR2.ics  calendar_ISS-GR1_SAW-GR2_AC2-GR1_BD-GR1.ics  calendar_ISS-GR1_SAW-GR2_AC2-GR1_BD-GR2.ics  calendar_ISS-GR1_SAW-GR2_AC2-GR2_BD-GR1.ics  calendar_ISS-GR1_SAW-GR2_AC2-GR2_BD-GR2.ics  calendar_ISS-GR2_SAW-GR1_AC2-GR1_BD-GR1.ics  calendar_ISS-GR2_SAW-GR1_AC2-GR1_BD-GR2.ics  calendar_ISS-GR2_SAW-GR1_AC2-GR2_BD-GR1.ics  calendar_ISS-GR2_SAW-GR1_AC2-GR2_BD-GR2.ics  calendar_ISS-GR2_SAW-GR2_AC2-GR1_BD-GR1.ics  calendar_ISS-GR2_SAW-GR2_AC2-GR1_BD-GR2.ics  calendar_ISS-GR2_SAW-GR2_AC2-GR2_BD-GR1.ics  calendar_ISS-GR2_SAW-GR2_AC2-GR2_BD-GR2.ics
sources/: base.py
sources/aboc/: source.py
sources/iss/: auth.py  fetch.py  parse.py  source.py
sources/saw/: fetch.py  parse.py  source.py
sources/teamup/: fetch.py  parse.py  source.py
sources/uma/: auth.py
